--- a/web/src/components/project-preview.module.css
+++ b/web/src/components/project-preview.module.css
@@ -24,9 +24,11 @@
 }
 
 .title {
+  color: var(--color-nav-text); 
   @media (hover: hover) {
     @nest .root:hover & {
       text-decoration: underline;
+      color: var(--color-accent);
     }
   }
 }
