--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -9,19 +9,23 @@
 .wrapper {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 960px;
+  max-width: 1200px;
   padding: 1em;
   display: flex;
+  color: var(--color-nav-text);
+  border-bottom: 1px solid var(--color-border);
 
   @media (--media-min-small) {
-    padding: 1.5em 1.5em;
+    padding: 1.5em;
+  }
+  @media (--media-min-x-large) {
+    max-width: 2000px;
   }
 }
 
 .branding {
   font-weight: 600;
   flex: 1;
-
   @nest & a {
     display: inline-block;
     padding: 0.5em;
@@ -35,6 +39,19 @@
     }
   }
 }
+
+.brandingIcon,
+.brandingLabel {
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.brandingLabel{
+  padding:0 0.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.125rem;
+}
+
 
 .toggleNavButton {
   appearance: none;
@@ -78,8 +95,8 @@
 
   @media (--media-max-small) {
     position: absolute;
-    background: var(--color-white);
-    color: var(--color-black);
+    background: var(--color-background);
+    color: var(--color-body-text);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     left: 0;
     right: 0;
