--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -39,7 +39,7 @@
   @nest & a {
     display: inline-block;
     padding: 0.5rem 0;
-    color: inherit;
+    color: var(--color-nav-text);
     text-decoration: none;
 
     @media (hover: hover) {
