--- a/web/src/components/project.module.css
+++ b/web/src/components/project.module.css
@@ -7,6 +7,13 @@
   composes: responsiveTitle1 from './typography.module.css';
 }
 
+.header {
+  composes: responsiveTitle3 from './typography.module.css';
+}
+
+.headerContent{
+  margin-bottom: 3rem; 
+}
 .mainImage {
   position: relative;
   background: #eee;
@@ -29,11 +36,13 @@
   grid-column-gap: 2em;
 
   @media (--media-min-medium) {
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 2fr;
+    grid-column-gap: 3em;
   }
 }
 
 .mainContent {
+  padding-right: 3rem;
   @nest & a {
     color: var(--color-accent);
 
@@ -48,14 +57,21 @@
 .metaContent {
 }
 
+.projectBrief{
+}
+
+.projectBreakdown{
+ 
+}
+
 .publishedAt {
   composes: small from './typography.module.css';
   margin: 1.5rem 0 3rem;
-  color: var(--color-gray);
+  color: var(--color-body-text);
 }
 
 .categories {
-  border-top: 1px solid var(--color-very-light-gray);
+  border-top: 1px solid var(--color-border);
   margin: 2rem 0 3rem;
 
   @nest & ul {
@@ -74,22 +90,42 @@
   margin: 0.5rem 0 0;
 }
 
-.relatedProjects {
-  border-top: 1px solid var(--color-very-light-gray);
+.accolades {
+  border-top: 1px solid var(--color-border);
   margin: 2rem 0 3rem;
 
   @nest & ul {
-    list-style: none;
-    margin: 0.75rem 0;
+    list-style-type: none;
+    margin: 0.75em 0;
     padding: 0;
   }
 
-  @nest & a {
-    display: inline-block;
-    color: inherit;
-    text-decoration: none;
-    padding: 0.25rem 0;
+  @nest & ul li {
+    padding: 0.5rem 0;
   }
+}
+
+.accoladeLabel {
+  composes: base from './typography.module.css'; 
+  margin: 0;
+  padding: 0;
+}
+.accoladeAddress {
+  composes: small from './typography.module.css';
+  color: var(--color-green);
+  margin: 0;
+  padding: 0;
+}
+
+
+.accoladesHeadline {
+  composes: base from './typography.module.css';
+  margin: 0.5rem 0 0;
+}
+
+.relatedProjects {
+  border-top: 1px solid var(--color-border);
+  margin: 2rem 0 3rem;
 }
 
 .relatedProjectsHeadline {
