--- a/web/src/styles/custom-media.css
+++ b/web/src/styles/custom-media.css
@@ -2,3 +2,5 @@
 @custom-media --media-max-small (max-width: 449px);
 @custom-media --media-min-medium (min-width: 675px);
 @custom-media --media-min-large (min-width: 900px);
+@custom-media --media-min-x-large (min-width: 2200 px);
+
