--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -1,5 +1,5 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
   position: relative;
@@ -10,13 +10,13 @@
   box-sizing: border-box;
   margin: 0 auto;
   max-width: 1200px;
-  padding: 1em;
+  padding: 1rem;
   display: flex;
   color: var(--color-nav-text);
   border-bottom: 1px solid var(--color-border);
 
   @media (--media-min-small) {
-    padding: 1.5em;
+    padding: 1rem 0 0 0;
   }
   @media (--media-min-x-large) {
     max-width: 2000px;
@@ -26,12 +26,16 @@
 .branding {
   font-weight: 600;
   flex: 1;
+
   @nest & a {
     display: inline-block;
     padding: 0.5em;
-    color: inherit;
+    color: var(--color-nav-text);
     text-decoration: none;
-
+      @nest &:link,&:visted  {
+        color: var(--color-accent);
+      }
+    
     @media (hover: hover) {
       @nest &:hover {
         color: var(--color-accent);
@@ -46,12 +50,11 @@
   display: inline-block;
 }
 
-.brandingLabel{
-  padding:0 0.5rem;
+.brandingLabel {
+  padding: 0 0.5rem;
   text-transform: uppercase;
   letter-spacing: 0.125rem;
 }
-
 
 .toggleNavButton {
   appearance: none;
