--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -2,7 +2,7 @@
 @import '../styles/custom-properties.css';
 
 .root {
-  margin: 2em 0 4em;
+  margin: 4em 0 4em;
 }
 
 .headline {
@@ -20,13 +20,13 @@
   list-style: none;
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 2em;
+  grid-gap: 4em 2em;
 
   @media (--media-min-small) {
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (--media-min-medium) {
+  @media (--media-min-large) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
