--- a/web/src/components/project.module.css
+++ b/web/src/components/project.module.css
@@ -49,13 +49,7 @@
 .mainContent {
   padding-right: 3rem;
   @nest & a {
-    color: var(--color-accent);
-
-    @media (hover: hover) {
-      @nest &:hover {
-        color: inherit;
-      }
-    }
+    font-weight: normal; 
   }
 }
 
