--- a/web/src/pages/about.module.css
+++ b/web/src/pages/about.module.css
@@ -18,7 +18,8 @@
 .mainContent {
   padding-right: 3rem;
 
-  @nest & a{ 
+   @nest & a{ 
+     font-weight: normal;
     text-decoration: none;
     color: var(--color-emp-text);
   }
@@ -27,6 +28,7 @@
   @nest & a:hover {
     color: var(--color-nav-text);
   }
+ 
 }
 
 .profile {
@@ -54,27 +56,6 @@
   padding: 1.5rem 0;
 }
 
-.socialIcon {
-  background-color: transparent;
-  color: var(--color-body-text);
-  border: 1px solid currentColor;
-  display: inline-block;
-  padding: 0.3rem;
-  font-size: 1.5rem;
-  margin: 0rem 0.5rem 0 0rem;
-  text-decoration: none;
 
-  @media (hover: hover) {
-    &:hover {
-      color: var(--color-background);
-      background-color: var(--color-body-text);
-      border-color: var(--color-body-text);
-    }
-  }
-  @nest & svg {
-    display: block;
-    margin: auto;
-  }
-}
 .timelineContent {
 }
