--- a/web/src/pages/index.module.css
+++ b/web/src/pages/index.module.css
@@ -1,4 +1,5 @@
 @import '../styles/custom-properties.css';
+@import '../styles//custom-media.css';
 
 .jumbotron{
     min-height: calc(100vh - 100px); 
@@ -11,8 +12,9 @@
 }
 
 .jumboGreeting{
-    color: var(--color-body-text);
+    color: var(--color-sub-text);
     composes: responsiveTitle4 from '../components/typography.module.css';
+    font-weight: normal;
 }
 .myName {
     color: var(--color-emp-text);
@@ -20,8 +22,8 @@
 }
 .myTagline{
     color: var(--color-emp-text);
-    composes: responsiveTitle1 from '../components/typography.module.css';
     margin: 0;
+    composes: responsiveTitle5 from '../components/typography.module.css';
 }
 
 .myDescription{
@@ -43,6 +45,7 @@
 
     &:hover{
         background-color: var(--color-nav-text);
-        color: var(--color-white);
+        border: solid 1px var(--color-nav-text);
+        color: var(--color-background);
     }
 }
