--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -26,7 +26,15 @@ h1,h2,h3,h4,h5,h6{
   color:var(--color-emp-text);
 }
 
-p{
-  color:var(--color-light-green);
+
+a{
+  color: var(--color-green);
+  text-decoration: none;
+  font-weight: bold;
+  @media (hover: hover) {
+    @nest &:hover {
+      color: var(--color-accent);
+    }
+  }
 }
 
