--- a/web/src/_cleanup/role-list.module.css
+++ b/web/src/_cleanup/role-list.module.css
@@ -1,4 +1,4 @@
-@import "../styles/custom-properties.css";
+/* @import "../styles/custom-properties.css";
 
 .root {
   margin: 2rem 0 3rem;
@@ -63,4 +63,4 @@
 
 .roles {
   color: var(--color-green);
-}
+} */
